:sparkles: adds not found routing, page, assets, styling

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,16 @@
   font-size: 16pt;
   font-style: normal;
 }
+.center-content {
+  text-align: center;
+}
+.page-body {
+  margin-bottom: 2rem;
+  height: 60vh;
+}
+.title-header {
+  padding: 0.5rem;
+}
 
 /* ---BUTTON--- */
 .nav-button {
@@ -18,11 +28,7 @@
 
 /* ---FOOTER--- */
 footer {
-  background-color: white;
-  bottom: 0;
   padding: 0.5rem;
-  position: fixed;
-  width: 100%;
 }
 .footer-content {
   display: flex;
@@ -52,4 +58,14 @@ footer {
 .nav-link-group {
   display: flex;
   align-items: center;
+}
+
+/* ---HOME--- */
+.home-apartment-image {
+  width: 100vw;
+}
+
+/* ---NOT FOUND--- */
+.not-found-key-image {
+  height: 10rem;
 }
