--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,29 @@ footer {
   width: 100vw;
 }
 
+/* --INDEX--- */
+.card {
+  box-shadow: 1px 1px #696049;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  width: 18rem;
+}
+.index-cards-set {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.index-profile-image {
+  max-height: 250px;
+  overflow: hidden;
+}
+.apartment-image {
+  width: 17rem;
+}
+
 /* ---NOT FOUND--- */
 .not-found-key-image {
   height: 10rem;
