--- a/src/App.css
+++ b/src/App.css
@@ -47,12 +47,16 @@ footer {
 }
 
 /* ---FORM--- */
-.form-validations {
-  color: red;
-}
-.form-size {
+.auth-form {
   width: 50vw;
   margin: 0 auto;
+}
+.form-size {
+  width: 90vw;
+  margin: 0 auto;
+}
+.form-validations {
+  color: red;
 }
 
 /* ---HEADER--- */
@@ -104,10 +108,6 @@ footer {
   width: 17rem;
 }
 
-/* ---MY APARTMENTS--- */
-.my-apartments {
-}
-
 /* ---NOT FOUND--- */
 .not-found-key-image {
   height: 10rem;
@@ -128,14 +128,14 @@ footer {
 }
 
 @media (max-width: 900px) {
-  .form-size {
+  .auth-form {
     width: 80vw;
     margin: 0 auto;
   }
 }
 
 @media (max-width: 650px) {
-  .form-size {
+  .auth-form {
     width: 95vw;
     margin: 0 auto;
   }
